# sae-2026

./: INFORME_TEMPORAL.md  PLAN.md  README.md  graficos.py  main.py  pyproject.toml  tesis_may_01.py
